style.css
html, body {
	height: 100%;
	margin: 0 auto;
	font-family: 'Dosis', sans-serif;
	color: rgba(0,0,0,0.6);
	text-align: center;
	text-transform: uppercase;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	--button-opacity: 0.5;
	--color-button-opacity: 0.6;
}

.content-wrapper {
	padding: 0 20px;
	max-height: 80%;
	max-width: 90%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	background: rgba(219, 219, 219, 0.2);
	border-radius: 3px;
	border: 2px solid rgba(219, 219, 219, 0.5);
}

h1 {
	font: 600 3.5em 'Dosis', sans-serif;
	color: inherit;
	text-align: center;
	letter-spacing: 0.2em;
	padding-left: 0.1em;
	margin-top: 24px;
	width: 100%;
}

h3 {
	margin-left: 20px;
	font: 900 1.5em 'Ubuntu Mono', monospace;
	color: inherit;
	text-align: center;
	text-transform: none;
}

.user-input {
	margin: 0 auto 0 auto;
}

.color-wrapper {
	border-radius: 3px;
	margin: 0 5px;
	opacity: var(--color-button-opacity);
}

.lock-button {
	opacity: var(--color-button-opacity);
}

.color-button {
	visibility: hidden;
}

.button {
	border-radius: 3px;
	border: none;
	border-right: 2px solid rgba(0,0,0,0.5);
	border-bottom: 2px solid rgba(0,0,0,0.5);
	background-color: rgba(219, 219, 219, var(--button-opacity));
	font: inherit;
	color: rgba(0,0,0,0.8);
	transition: all;
}

.button:hover {
	cursor: pointer;
	--button-opacity: 0.8;
	--color-button-opacity: 1;
}

.button:focus {
	outline: 0;
}

.button:active {
	border-top: 1px solid rgba(0,0,0,0.5);
	border-left: 1px solid rgba(0,0,0,0.5);
	border-right: 1px solid transparent;
	border-bottom: 1px solid transparent;
}

.color-choice-buttons {
	display: flex;
	justify-content: space-around;
	margin: 10px 0;
}

.slider {
	-webkit-appearance: none;
	height: 15px;
	background: rgba(219, 219, 219);
	opacity: 0.5;
}

.slider:hover {
	opacity: 0.8;
}

.slider:focus {
	outline: 0;
}

.slider::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	width: 10px;
	height: 15px;
	background: rgba(20, 20, 20, 0.85);
	cursor: pointer;
}

.slider::-moz-range-thumb {
	width: 10px;
	height: 15px;
	background: black;
	cursor: pointer;
}

.slider-labels {
	display: flex;
	justify-content: space-around;
}

.current-background-info {
	display: flex;
	justify-content: center;
	align-items: baseline;
}

.copy-button {
	padding: 5px 10px;
}

